// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTableHead should render correctly 1`] = `
<thead>
  <th>
    Skyscanner
  </th>
</thead>
`;

exports[`BpkTableHead should render correctly with arbitrary props 1`] = `
<thead
  data-foo="bar"
  id="my-custom-id"
>
  <th>
    Skyscanner
  </th>
</thead>
`;

exports[`BpkTableHead should render correctly with custom class 1`] = `
<thead
  className="my-custom-class"
>
  <th>
    Skyscanner
  </th>
</thead>
`;
